Cambios al ultimo parrafo antes de las conclusiones.

--- a/fog_paper_v2.tex
+++ b/fog_paper_v2.tex
@@ -228,7 +228,7 @@ Calibrated canopy parameters $p$ and $S$ are comparable with values found in the
 \subsection{Cloud water interception}
 Estimated $CWI$ is negligible during the hot seasons while during the cool seasons it is significant. $CWI$ represents 52\% and 21\% of the incident rainfall during the first and second cool season, respectively. These values are relative high comparing to studies reviewed by \cite{Bruijnzeeletal2011} (4\%-45\%) and others reported in the literature (6\%-31\%) \citep{Hutleyetal1997, Holwerdaetal2006, McJannetetal2007a, Holwerdaetal2010, Ueharaetal2012}. However, they are small compared to the 93\% found by \cite{CavalierandGoldstein1989}. Daily average $CWI$ is 2.3 mm and 1.3 mm during the first and second cool seasons, respectively. \cite{Pryetetal2012a} estimated daily $CWI$ of 1.2 mm for the same type of vegetation at a similar altitude (650 m a.s.l.) in another island of Galapagos during the 2010 cool season. This value can be comparable with the value found in the 2014 cool season of this study. \cite{Giambellucaetal2011} reported daily $CWI$ of 0.43 mm for low shrubs and trees in Hawaii, \cite{Ritteretal2008} found values of 0.7 mm in a elfin laurel forest in Canary, \cite{Holwerdaetal2006} reported values of 2.14 mm for a 3 m tall Puerto Rican cloud forest, while \cite{CavalierandGoldstein1989} found values of 2.18 mm in a cloud forest in Colombia. Estimates of daily $CWI$ reported by \cite{Ueharaetal2012} reach 3.26 mm for a dwarf coniferous shrub in the Japan Alps.
 
-Estimates of $CWI$ by the vegetation are contrasting between the two cool seasons. The difference can be related to changes in the canopy structure or due to meteorological factors. Indeed, changes in the canopy structure are likely to happen. \cite{Aboaletal2000} found that heavy thinning of a pine forest in Tenerife, led to a long-term decline in throughfall. However, it should have a small effect on the estimates given that $CWI$ is a proportion of the quantity measured by the fog gauge and simulated cumulative throughfall remain close to the observed ones during both cool seasons. Considering constant canopy characteristics, $CWI$ is basically driven by the fog liquid water content (FLWC) and wind speed intensity \citep{Villegasetal2008}. \cite{Villegasetal2008} reported that $CWI$ is constraint at low FLWC by limited fog availability and at high FLWC, by precipitation potential. The authors also concluded that optimal conditions for $CWI$ are during medium values of FLWC and wind speed. FLWC was not measured in this study, nevertheless its presence can be assessed from wind speed measurements during $CWI$. Generally, for higher wind speeds, mean $CWI$ increases at both cool seasons, but some difference can be identified (Table 9). At the first cool season, average $CWI$ constantly increases with wind speed, even at high intensities. On the contrary, during the second cool season, the increase reaches a plateau around 5 ms$^{-1}$. $CWI$ during the first season starts at lower values of wind speed than the second season. The plateau of $CWI$ and its late start with lower wind speeds, suggest that FLWC is lower than its optimal conditions, whereas FLWC during the first seasons seems optimal, given that there is enough FLWC at low wind speeds to be intercepted and at higher wind speeds it does not yet reaches its peak. For this reason, we consider that the higher values of $CWI$ during the first cool season are related to a higher FLWC that combined with the observed wind speeds enhances better conditions of $CWI$ compared with the second season. an important fact that supports this hypothesis is that average values of meteorological variables of the two cool seasons are similar, except for temperature, which is significant higher during the second cool season (ca. $2$ $\mathrm{^{\circ}C}$). Such a difference in temperature might be related to a previous effect of the 2015-2016 Niño event. Indeed, according to the data of the National Oceanic and Atmospheric Administration (NOAA) in the El Niño 1$+$2 region (http://www.cpc.ncep.noaa.gov/products/CDB/Tropics/figt5.shtml) and the CDF Meteorological Database (http://www.darwinfoundation.org/datazone/climate/), a sea surface temperature anomaly has been registered during the 2014 cool season (c.a. $1$ $\mathrm{^{\circ}C}$). Temperature could explain the difference in FLWC, given that higher FLWC is inversely related to the latent heat of condensation of water temperature \citep{Thompson2007}. Such conditions probably produce the rise of the cloud base reducing fog occurrence in the highlands. It seems that El Niño events might have a negative effect in the FLWC and thus, reducing cloud water interception. 
+Estimates of $CWI$ by the vegetation are contrasting between the two cool seasons. This difference can be related to changes in the canopy structure or to meteorological factors, but we argue that in our case, the later is the most probable cause. As discussed in~\cite{Aboaletal2000}, heavy thinning of a pine forest in Tenerife, led to a long-term decline in throughfall. However, in our case this should have a small effect given that $CWI$ is proportional to the quantity measured by the fog gauge; and the simulated cumulative throughfall remains close to the observed one during both cool seasons. Thus, considering constant canopy characteristics, $CWI$ is basically driven by the fog liquid water content (FLWC) and wind speed intensity \citep{Villegasetal2008}. \cite{Villegasetal2008} reported that $CWI$ is constrained by limited fog availability at low FLWC  and by precipitation potential at high FLWC. The authors also concluded that the optimal conditions for $CWI$ are during medium (average???) values of FLWC and wind speed. FLWC was not measured in this study, nevertheless its presence can be assessed from wind speed measurements. In general terms, higher wind speeds mean higher $CWI$ at both cool seasons, but some differences can must be noted (Table 9). At the first cool season, the average $CWI$ increases constantly with wind speed, even at high intensities. On the contrary, during the second cool season, the rising $CWI$ reaches a plateau at around 5 ms$^{-1}$. To understand this, notice that $CWI$ starts at lower values of wind speed during the first season when compared to the second one. The plateau of $CWI$ and its late start with lower wind speeds during the second season, suggests that FLWC is below its optimal conditions, whereas FLWC during the first seasons seems optimal. This leads us to believe that the higher values of $CWI$ during the first cool season are related to a higher FLWC, which combined with the observed wind speeds enhance the conditions for $CWI$. Moreover, an important fact that supports this hypothesis is that the average values of almost all meteorological variables  are similar during the both cool seasons, except temperature, which is significantly higher during the second cool season (ca. $2$ $\mathrm{^{\circ}C}$). Such difference in temperature might be related to a previous (is previous the right word???) effect of the 2015-2016 Niño event. Indeed, according to data of the National Oceanic and Atmospheric Administration (NOAA) in the El Niño 1$+$2 region (http://www.cpc.ncep.noaa.gov/products/CDB/Tropics/figt5.shtml) and the CDF Meteorological Database (http://www.darwinfoundation.org/datazone/climate/), a sea surface temperature anomaly was registered during the 2014 cool season (c.a. $1$ $\mathrm{^{\circ}C}$). The difference in temperature could explain the difference in FLWC~\citep{Thompson2007}. Such conditions probably produce the rise of the cloud base, reducing fog occurrence in the highlands. It seems that El Niño events might have a negative effect in the FLWC and thus, reduce cloud water interception. 
 
 
 \section{Conclusions}
